# embassy

embassy-rp/: Cargo.toml
embassy-rp-examples/: Cargo.toml
embassy-rp-examples/.cargo/: config
embassy-rp-examples/src/: main.rs  pll.rs  resets.rs
embassy-rp/src/: lib.rs
embassy-rp/src/util/: peripheral.rs
